code improvement